trunk/Archive2/62/2ecff602600300/output
main.cpp:1:1: error: C++ requires a type specifier for all declarations
Hallo, 
^~~~~
main.cpp:1:6: error: expected ';' at end of declaration
Hallo, 
     ^
     ;
main.cpp:3:1: error: unknown type name 'ich'
ich habe eine Frage zu ihrem Produkt "Milbopax", Sprühlösung. In der Gebrauchsanweisung steht etwas irritierend bei "Anwendung", 1)
^
main.cpp:3:9: error: expected ';' after top level declarator
ich habe eine Frage zu ihrem Produkt "Milbopax", Sprühlösung. In der Gebrauchsanweisung steht etwas irritierend bei "Anwendung", 1)
        ^
        ;
4 errors generated.
